# christmasCharityAuction

./: .gitignore
backend/: Procfile  pyproject.toml  requirements.txt
backend/src/: settings.py  urls.py
backend/src/apps/auction/: admin.py  apps.py  consts.py  models.py  serializers.py  urls.py  views.py
backend/src/apps/auction/migrations/: 0001_initial.py  0002_remove_auction_photo_auction_photo_url.py
backend/src/apps/authentication/: apps.py  urls.py  views.py
frontend/: next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json
frontend/app/: globals.css
frontend/src/app/: auction-list.tsx  globals.css  layout.tsx  navbar.tsx  not-found.tsx  page.tsx
frontend/src/app/add-auction/: page.tsx
frontend/src/app/auction/: layout.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/swr/: use-auctions.ts  use-bids.ts
frontend/src/app/validators/: create-auction.ts
frontend/src/components/: SingleImageDropzone.tsx  add-auction-button.tsx  auction-card.tsx  auction-component.tsx  auction-modal.tsx  auction-search.tsx  auctions-filter.tsx  auctions-stats.tsx  bid-component.tsx  bids-section.tsx  bids-table.tsx  change-user-data-modal.tsx  dark-mode-toggle.tsx  image-uploader.tsx  loader.tsx  sign-in-button.tsx
frontend/src/components/ui/: badge.tsx  calendar.tsx  dialog.tsx  dropdown-menu.tsx  progress.tsx
frontend/src/lib/: edgestore.ts
frontend/src/lib/mock-data/: auction.ts
frontend/src/lib/types/: auction.ts  sortby.ts  user.ts
frontend/types/: next-auth.d.ts
(+4 files in other folders)
