[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["gbdluz <gbdluzewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.6"
drf-yasg = "^1.21.7"
djangorestframework = "^3.14.0"
setuptools = "^68.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
