[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["gbdluz <gbdluzewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.2.6"
drf-yasg = "^1.21.7"
djangorestframework = "^3.14.0"
setuptools = "^68.2.2"
djangorestframework-simplejwt = "^5.3.0"
django-allauth = "^0.55.0"
dj-rest-auth = {extras = ["with-social"], version = "^5.0.1"}
django-cors-headers = "^4.3.0"
whitenoise = "^6.6.0"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
